updated content description fixed video breaking responsive design

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
 {% block maincontent %}
     <div class="container mainContent">
     <div class="row-fluid">
-        <div class="span9">
+        <div class="span10">
             <div class="innerSpacer">
                 <div class="portfolioItem">
-		      <iframe width="640" height="360" src="http://www.youtube-nocookie.com/embed/5vfdIE-eMig?rel=0" frameborder="0"></iframe>
+		      <iframe width="100%" height="360" seamless="seamless" src="http://www.youtube-nocookie.com/embed/5vfdIE-eMig?rel=0" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
@@ -20,21 +20,21 @@
                     <a href="project_single.html">Welcome to ClinDesk</a>
                 </h3>
                 <div class="subtitle">
-                    <span class="icon-file "></span><a href="#">Opening Medical Education</a>
+                    <span class="icon-file "></span><a href="#">Opening Medical knowledge</a>
                 </div>
 
-                <p>Here is filler text. OMG WELCOME TO US</p>
-                <br />
+                <p>Our video lectures are designed for everyone, from people with no medical background through to experienced physicians. For each condition we will discuss:</p>
                   <ul class="unstyled">
-                    <li><i class="icon-ok"></i>Feature One</li>
-                    <li><i class="icon-ok"></i>Another Feature</li>
-                    <li><i class="icon-ok"></i>Some More Info</li>
-                    <li><i class="icon-ok"></i>Gorgeous Looks</li>
-                    <li><i class="icon-ok"></i>Elegance</li>
-                  </ul>
+                    <li><i class="icon-ok"></i>Background</li>
+                    <li><i class="icon-ok"></i>Epidemiology</li>
+                    <li><i class="icon-ok"></i>Symptoms</li>
+                    <li><i class="icon-ok"></i>Diagnosis</li>
+                    <li><i class="icon-ok"></i>Treatment</li>
+					<li><i class="icon-ok"></i>Outcome</li>
+                </ul>
                 <br />
 
-                <a href="#disease-topics" class="btn btn-info"><i class="icon-share icon-white"></i>See the Topics</a>
+                <a href="#condition-topics" class="btn btn-info"><i class="icon-share icon-white"></i>See the Topics</a>
 
             </div>
 
@@ -55,8 +55,8 @@
 
 					<!-- carousel -->
 					<div class="row-fluid relative">
-						<div class="span12" id="disease-topics">
-							<h1>Diseases</h1>
+						<div class="span12" id="condition-topics">
+							<h1>Conditions</h1>
 						</div>
 
 						<div class="carousel-nav">
