--- a/templates/base.html
+++ b/templates/base.html
@@ -219,9 +219,9 @@
 {# TODO: Make minified JS. For now, we explode the JS, since I want to cut some of their clutter out. #}
 
     <!-- import javascript -->
-  		<script type="text/javascript" src="{{ static('js/jquery.js') }}"></script>
-  		<script type="text/javascript" src="{{ static('js/jquery.isotope.min.js') }}"></script>
-  		<script type="text/javascript" src="{{ static('js/bootstrap/bootstrap.min.js') }}"></script>
+  		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ static('js/bootstrap/bootstrap.min.js') }}"></script>
+{#  		<script type="text/javascript" src="{{ static('js/jquery.isotope.min.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/boot.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe.flare/src/jquery.mousewheel.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe.flare/src/jquery.theme.utils.js') }}"></script>
@@ -242,6 +242,7 @@
   		<script type="text/javascript" src="{{ static('js/pe.flare/src/jquery.pixelentity.backgroundSlider.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe.flare/src/jquery.pixelentity.simplethumb.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe.flare/src/jquery.pixelentity.flare.lightbox.render.gallery.js') }}"></script>
+
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.volo.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.volo.simpleskin.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.effects.iconmove.js') }}"></script>
@@ -250,6 +251,7 @@
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.contactForm.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.newsletter.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.isotope.js') }}"></script>
+
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.widgets.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.widgets.twitter.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.widgets.flickr.js') }}"></script>
@@ -266,7 +268,7 @@
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.widgets.volo.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/jquery.pixelentity.widgets.carousel.js') }}"></script>
   		<script type="text/javascript" src="{{ static('js/pe/pixelentity.controller.js') }}"></script>
-  		<script type="text/javascript" src="{{ static('js/pe/init.js') }}"></script>
+  		<script type="text/javascript" src="{{ static('js/pe/init.js') }}"></script>#}
 
     {# TODO: Move this to external JS or something. #}
     {# TODO: Can't JS set the cookie? Why not use JS instead of Flask? #}
