Fix some base urls.

--- a/templates/base.html
+++ b/templates/base.html
@@ -197,17 +197,17 @@
 					<div class="row-fluid">
 						<div class="span3 copyright"><p>&copy; 2012 ClinDesk</p></div>
 						<div class="span6 footNav">
-							<a class="first" href="index.html">Home</a><span>&#124;</span>
-							<a href="full_width.html">Diseases</a><span>&#124;</span>
-							<a href="elements.html">Drugs &amp; Pharm</a><span>&#124;</span>
-							<a href="support.html">Donate</a><span>&#124;</span>
-							<a href="help.html">Help &amp; FAQ</a><span>&#124;</span>
-							<a href="about.html">About</a>
+							<a class="first" href="/index.html">Home</a><span>&#124;</span>
+							<a href="/diseases/">Diseases</a><span>&#124;</span>
+							<a href="/special-topics/">Special Topics</a><span>&#124;</span>
+							<a href="/support.html">Donate</a><span>&#124;</span>
+							<a href="/help.html">Help &amp; FAQ</a><span>&#124;</span>
+							<a href="/about.html">About</a>
 						</div>
 						<div class="span3 smedia">
                           <a href="https://www.facebook.com/ClinDesk" data-rel="tooltip" title="Facebook"  class="sm-icon sm-icon-facebook"></a>
                             <a href="#" data-rel="tooltip" data-position="bottom" title="Get RSS Feed"  class="sm-icon sm-icon-rss"></a>
-                            <a href="contact.html" data-rel="tooltip" data-position="bottom" title="Quick Email"  class="sm-icon sm-icon-email"></a>
+                            <a href="/about.html#contact" data-rel="tooltip" data-position="bottom" title="Email Us"  class="sm-icon sm-icon-email"></a>
                             <a href="https://twitter.com/ClinDesk" data-position="bottom" data-rel="tooltip" title="Follow Us"  class="sm-icon sm-icon-twitter"></a>
                         </div>
 					</div>
@@ -217,8 +217,8 @@
 		<!--back to top button-->
     {# TODO: Fix this back to top magic w/ js? Code is in: pixelentity.controller.js
 	<a href="#top" id="peBackToTop" class="label btt disabled"><span class="icon-chevron-up icon-white"></span></a>
-    #} 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    #}
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="{{ static('js/bootstrap/bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/min.cd.js') }}" async></script>
     {# TODO: Can't JS set the cookie? Why not use JS instead of Flask? #}
