--- a/templates/base.html
+++ b/templates/base.html
@@ -48,9 +48,8 @@
 					<!--main nav-->
 <ul class="nav">
 	<li><a href="/index.html">Home</a></li>
-	<li class="dropdown">
-		<a href="/diseases/">Diseases<b class="caret"></b></a>
-		<ul class="dropdown-menu">
+	<li><a href="/conditions/">Conditions</a>
+{#		<ul class="dropdown-menu">
 			<li><a href="full_width.html"><i class="icon-th icon-white"></i> &nbsp;<b>View All Topics</b></a></li>
 			<li class="divider"></li>
 			<li><a href="full_width.html">Heart &amp; Vascular <span class="badge badge-warning">New!</span></a></li>
@@ -61,15 +60,12 @@
 			<li><a href="sidebar_left.html">Digestive and Gastrointestinal</a></li>
 			<li class="divider"></li>
 			<li><a href="search.html"><i class="icon-question-sign icon-white"></i> &nbsp;Search</a></li>
-		</ul>
+		</ul> #}
 	</li>
-	<li class="dropdown">
-		<a href="/special-topics/">Special Topics</a>
+	<li><a href="/special-topics/">Special Topics</a></li>
+	<li><a href="/support.html">Support Us</a>
 	</li>
-	<li class="dropdown"><a href="/support.html">Support Us</a>
-	</li>
-    <li>
-   		<a href="/help.html">Help &amp; FAQ</a>
+	<li><a href="/help.html">Help &amp; FAQ</a>
    	</li>
 	<li class="last"><a href="/about.html">About</a></li>
 </ul>
@@ -198,7 +194,7 @@
 						<div class="span3 copyright"><p>&copy; 2012 ClinDesk</p></div>
 						<div class="span6 footNav">
 							<a class="first" href="/index.html">Home</a><span>&#124;</span>
-							<a href="/diseases/">Diseases</a><span>&#124;</span>
+							<a href="/conditions/">Conditions</a><span>&#124;</span>
 							<a href="/special-topics/">Special Topics</a><span>&#124;</span>
 							<a href="/support.html">Donate</a><span>&#124;</span>
 							<a href="/help.html">Help &amp; FAQ</a><span>&#124;</span>
