--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Diseases &amp; Conditions{% endblock %}
-{% block tagline_text %}Diseases{% endblock %}
+{% block title %}Conditions and Diseases{% endblock %}
+{% block tagline_text %}Conditions{% endblock %}
 {% block maincontent %}
 <!--main content-->
 <section class="mainContentWrap">
