Trim & autoindent index. (+search tweak)

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             <div class="nav-collapse">
 
                 <div class="smedia widget widget_search">
-                    <form class="form-inline" action="#" id="searchform" method="get" role="search">
+                    <form class="form-inline" action="/search.html" id="searchform" role="search">
                         <input type="text" class="input-medium span3"  placeholder="Search...">
                         <button class="icon-search" type="submit"></button>
                     </form>
@@ -207,7 +207,6 @@
         </div>
     </section>
 </footer>
-<!--back to top button-->
 {# TODO: Fix this back to top magic w/ js? Code is in: pixelentity.controller.js
 <a href="#top" id="peBackToTop" class="label btt disabled"><span class="icon-chevron-up icon-white"></span></a>
 #}
