1x4 "Conditions" row placeholder.

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,16 +37,11 @@
     </div>
 </div>
 
-
 <section class="mainContentWrap">
     <div class="container mainContent">
         <div class="row-fluid">
             <div class="span12">
-                <div class="row-fluid">
-                    <div class="divider dotted clearfix"><span></span></div>
-                </div>
 
-                <!-- carousel -->
                 <div class="row-fluid relative">
                     <div class="span12" id="condition-topics">
                         <h1>Conditions</h1>
@@ -60,127 +55,16 @@
                     </div>
                 </div>
 
-                <div class="row-fluid carouselBox" data-height="0,0" data-slidewidth="250">
+                <div class="row-fluid">
+                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
 
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a href="{{ static('img/content/homep1lb1.jpg') }}" class="peOver"
-                               data-target="flare"
-                               data-flare-scale="fit">
-                                <img src="{{ static('img/content/port09.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-                            <div class="title">
-                                <span class="icon-picture"></span><a href="#">Heart and Cardiovascular</a>
-                            </div>
-                            <p>Heart attacks, chest pain, stents, CABG ...</p>
-                        </div>
-                    </div>
+                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
 
+                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
 
+                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
 
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a href="{{ static('img/content/homegal1.jpg') }}" class="peOver"
-                               data-target="flare"
-                               data-flare-plugin="shutter"
-                               data-flare-gallery="homeGal"
-                               data-flare-scale="fillmax"
-                               data-flare-thumb="{{ static('img/content/homegal1t.jpg') }}"
-                               data-flare-bw="{{ static('img/content/homegal1bw.jpg') }}">
-                                <img src="{{ static('img/content/port05.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-                            <div class="title">
-                                <span class="icon-th"></span><a href="#">Gastrointestinal </a>
-                            </div>
-                            <p>Diarrhea, Constipation, Colon Cancer ...</p>
-                        </div>
-                    </div>
-
-
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a data-target="flare" href="http://www.youtube.com/watch?v=AFA-rOls8YA" class="peOver">
-                                <img src="{{ static('img/content/port14.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-                            <div class="title">
-                                <span class="icon-facetime-video"></span><a href="#">Pulmonary</a>
-                            </div>
-                            <p>COPD, Asthma ...</p>
-                        </div>
-                    </div>
-
-
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a href="project_single.html" class="peOver">
-                                <img src="{{ static('img/content/port16.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-                            <div class="title">
-                                <span class="icon-file"></span><a href="#">Infectious Disease</a>
-                            </div>
-                            <p>Pneumonia, Influenza, HIV ...</p>
-                        </div>
-                    </div>
-
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a href="project_single_video.html" class="peOver">
-                                <img src="{{ static('img/content/port10.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-                            <div class="title">
-                                <span class="icon-film"></span><a href="#">Oncology</a>
-                            </div>
-                            <p>Breast cancer, leukemia, lung cancer ... </p>
-                        </div>
-                    </div>
-
-
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a href="portfolio_1.html" class="peOver">
-                                <img src="{{ static('img/content/port12.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-                            <div class="title">
-                                <span class="icon-th-list"></span><a href="#">Portfolio</a>
-                            </div>
-                            <p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
-                        </div>
-                    </div>
-
-
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a href="project_single_slider.html" class="peOver">
-                                <img src="{{ static('img/content/port20.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-                            <div class="title">
-                                <span class="icon-picture"></span><a href="#">Slider Project Link</a>
-                            </div>
-                            <p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
-                        </div>
-                    </div>
-
-
-                    <div data-delay="0">
-                        <div class="portfolioItem">
-                            <a href="project_single.html" class="peOver">
-                                <img src="{{ static('img/content/port08.jpg') }}" alt="project" />
-                                <span></span>
-                            </a>
-
-                            <div class="title">
-                                <span class="icon-file"></span><a href="#">Project Page</a>
-                            </div>
-                            <p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
-                        </div>
-                    </div>
+                  <div class="divider dotted clearfix"><span></span></div>
                 </div>
 
             </div>
