Addtl. tweaks. Thoughts on the footer stuff & social media links?

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <div class="span8">
             <div class="innerSpacer">
                 <div class="portfolioItem">
-                    <iframe width="100%" height="360" seamless="seamless" src="http://www.youtube-nocookie.com/embed/5vfdIE-eMig?rel=0" frameborder="0"></iframe>
+                    <iframe width="100%" height="360" seamless="seamless" src="http://www.youtube-nocookie.com/embed/5vfdIE-eMig?rel=0&html5=1" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
@@ -15,9 +15,7 @@
         <!--description-->
         <div class="span4">
             <div class="item-description">
-                <h3>
-                    <a href="project_single.html">Welcome to ClinDesk</a>
-                </h3>
+                <h3>Welcome to ClinDesk</h3>
                 <div class="subtitle">
                     <span class="icon-file "></span><a href="#">Opening Medical knowledge</a>
                 </div>
