--- a/templates/index.html
+++ b/templates/index.html
@@ -54,20 +54,59 @@
                 </div>
 
                 <div class="row-fluid">
-                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
 
-                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
+                    <ul class="thumbnails">
+                      <li class="span3">
+                        <div class="thumbnail">
+                          <img src="http://placehold.it/260x180" alt="">
+                          <div class="caption">
+                            <h5>Thumbnail label</h5>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="span3">
+                        <div class="thumbnail">
+                          <img src="http://placehold.it/260x180" alt="">
+                          <div class="caption">
+                            <h5>Thumbnail label</h5>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+                          </div>
+                        </div>
+                      </li>
 
-                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
+                        <li class="span3">
+                          <div class="thumbnail">
+                            <img src="http://placehold.it/260x180" alt="">
+                            <div class="caption">
+                              <h5>Thumbnail label</h5>
+                              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                              <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+                            </div>
+                          </div>
+                        </li>
 
-                  <div class="span3"><h3>Column 1/4</h3><p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus fermentum posuere. Morbi sit amet nulla sed dolor elementum imperdiet. Quisque fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus.</p></div>
+                        <li class="span3">
+                          <div class="thumbnail">
+                            <img src="http://placehold.it/260x180" alt="">
+                            <div class="caption">
+                              <h5>Thumbnail label</h5>
+                              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                              <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+                            </div>
+                          </div>
+                        </li>
+                    </ul>
+
+
 
                   <div class="divider dotted clearfix"><span></span></div>
                 </div>
-
             </div>
-
         </div>
+        
     </div>
 </section>
 {% endblock %}
