--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -4,42 +4,31 @@
 {% block maincontent %}
 <!--main content-->
 <section class="mainContentWrap">
-  <div class="container mainContent">
-    <div class="row-fluid">
-      <div class="span9">
+    <div class="container mainContent">
         <div class="row-fluid">
-          <div class="innerSpacer">
+            <div class="span12">
 
-            <!--body search widget for mobile-->
-            <div class="row-fluid body-search">
-              <div class="span12 widget_search">
-                <form class="form-inline" action="#" method="get" role="search">
-                    <input type="text" class="input-medium span3"  placeholder="Search...">
-                    <button class="icon-search" type="submit"></button>
-                </form>
-              </div>
+                <!--body search widget for mobile-->
+                <div class="row-fluid body-search">
+                    <div class="span12 widget_search">
+                        <form class="form-inline" action="#" method="get" role="search">
+                            <input type="text" class="input-medium span3"  placeholder="Search...">
+                            <button class="icon-search" type="submit"></button>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span12">
+                        <h1>Coming Soon</h1>
+                    </div>
+                </div>
+
+{% include 'elements/all_conditions.html' %}
+
             </div>
-
-            <!--404 error-->
-            <div class="row-fluid">
-              <div class="span12">
-		<h1>Coming Soon</h1>
-              </div>
-            </div>
-
-
-
-          </div>
         </div>
-      </div>
-
-
-
-
-
-
     </div>
-  </div>
 </section>
 
 {% endblock %}
