Add CC license.

--- a/templates/base.html
+++ b/templates/base.html
@@ -188,7 +188,7 @@
     <section class="footerLower">
         <div class="container">
             <div class="row-fluid">
-                <div class="span3 copyright"><p>&copy; 2012 ClinDesk</p></div>
+                <div class="span3 copyright"><p>&copy; 2012 ClinDesk <br/><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank"><img src="{{ static('img/by-nc-sa.png') }}" /></a></p></div>
                 <div class="span7 footNav">
                     <a class="first" href="/index.html">Home</a><span>&#124;</span>
                     <a href="/conditions/">Conditions</a><span>&#124;</span>
