--- a/templates/elements/all_conditions.html
+++ b/templates/elements/all_conditions.html
@@ -1,46 +1,161 @@
+{# TODO: Make this a modularized for loop via Flask whatnots. #}
 <div class="row-fluid">
     <div class="span12">
         <div class="row-fluid">
             <ul class="thumbnails">
                 <li class="span3">
                     <div class="thumbnail">
-                        <img src="http://placehold.it/260x180" alt="">
-                        <div class="caption">
-                            <h5>Thumbnail label</h5>
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Blood, Bone Marrow, Lymphatics</h5>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
                         </div>
                     </div>
                 </li>
                 <li class="span3">
                     <div class="thumbnail">
-                        <img src="http://placehold.it/260x180" alt="">
-                        <div class="caption">
-                            <h5>Thumbnail label</h5>
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Heart and Vascular</h5>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="span3">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/260x180" alt="">
-                        <div class="caption">
-                            <h5>Thumbnail label</h5>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
                         </div>
                     </div>
                 </li>
 
                 <li class="span3">
                     <div class="thumbnail">
-                        <img src="http://placehold.it/260x180" alt="">
-                        <div class="caption">
-                            <h5>Thumbnail label</h5>
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Kidneys</h5>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Lungs</h5>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <div class="divider dotted clearfix"><span></span></div>
+        </div>
+    </div>
+</div>
+<div class="row-fluid">
+    <div class="span12">
+        <div class="row-fluid">
+            <ul class="thumbnails">
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Blood, Bone Marrow, Lymphatics</h5>
+                            <p>Red Blood Cell Conditions, Clotting and Coagulation Disorders, Leukemias, Lymphomas, Benign Bone Marrow Disorders</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Heart and Vascular</h5>
+                            <p>Congenital Heart Defects,
+                            Diseases of Blood Vessels,
+                            Diagnostics and Blood Tests,
+                            Coronary Circulation Conditions,
+                            Cardiac Arrest</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Kidneys</h5>
+                            <p>Acid-Base, Fluid, and Electrolyte Disorders
+                            Acute Kidney Failure
+                            Chronic Kidney Disease
+                            Drug- and Toxin-Based Kidney Disease
+                            Glomerular Diseases</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Lungs</h5>
+                            <p>Obstructive Disease
+                            Environmental and Occupational Diseases
+                            Pulmonary Circulation Conditions
+                            Restrictive and Interstitial Diseases
+                            Congenital Disorders</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <div class="divider dotted clearfix"><span></span></div>
+        </div>
+    </div>
+</div>
+<div class="row-fluid">
+    <div class="span12">
+        <div class="row-fluid">
+            <ul class="thumbnails">
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Blood, Bone Marrow, Lymphatics</h5>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Heart and Vascular</h5>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Kidneys</h5>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
+                            <h5>Lungs</h5>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
                         </div>
                     </div>
                 </li>
