--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                     <li><i class="icon-ok"></i>Outcome</li>
                 </ul>
                 <br />
-                <a href="#condition-topics" class="btn btn-info"><i class="icon-share icon-white"></i>See the Topics</a>
+                <a href="#condition-topics" class="btn btn-primary"><i class="icon-share icon-white"></i>See the Topics</a>
             </div>
         </div>
     </div>
