Some semi-valid 404 & security logic.

--- a/templates/elements/all_conditions.html
+++ b/templates/elements/all_conditions.html
@@ -74,7 +74,7 @@
                             Diagnostics and Blood Tests,
                             Coronary Circulation Conditions,
                             Cardiac Arrest</p>
-                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                            <p><a href="/conditions/heart-and-vascular/" class="btn btn-info">Learn More</a></p>
                         </div>
                     </div>
                 </li>
