--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,8 @@
 
                 <div class="smedia widget widget_search">
                     <form class="form-inline" action="/search.html" id="searchform" role="search">
-                        <input type="text" class="input-medium span3"  placeholder="Search...">
+                        <input type="hidden" name="cx" value="002941556813235485135:eikq6dcpctw"><input type="hidden" name="cof" value="FORID:11">
+                        <input type="text" class="input-medium span3" name="q" placeholder="Search...">
                         <button class="icon-search" type="submit"></button>
                     </form>
 
