Rename "Support" (vague) to Donate.

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -108,7 +108,7 @@
                           </div>
 
 
-
+{#
                           <div class="row-fluid">
                             <div class="span4">
                               <div class="hero-unit price inverse well">
@@ -158,9 +158,9 @@
                               </div>
                             </div>
                           </div>
+#}
 
-
-{# In the future, add this back? #}
+{# In the future, make a separate "Supporters" page or section somewhere? #}
 {#                          <!--columns-->
 
                           <div class="row-fluid">
