--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                         </ul> #}
                     </li>
                     <li><a href="/special-topics/">Special Topics</a></li>
-                    <li><a href="/support.html">Support Us</a>
+                    <li><a href="/donate.html">Support Us</a>
                     </li>
                     <li><a href="/help.html">Help &amp; FAQ</a>
                     </li>
@@ -194,7 +194,7 @@
                     <a class="first" href="/index.html">Home</a><span>&#124;</span>
                     <a href="/conditions/">Conditions</a><span>&#124;</span>
                     <a href="/special-topics/">Special Topics</a><span>&#124;</span>
-                    <a href="/support.html">Donate</a><span>&#124;</span>
+                    <a href="/donate.html">Donate</a><span>&#124;</span>
                     <a href="/help.html">Help &amp; FAQ</a><span>&#124;</span>
                     <a href="/about.html">About</a>
                 </div>
