--- a/templates/donate.html
+++ b/templates/donate.html
@@ -29,7 +29,9 @@
                             <div class="span7">
 {#                              <blockquote><p>"Inspirational tiny quote here omg."</p><small class="pull-right">Some Guy</small></blockquote>#}
                                 <blockquote>
-                                    <h2>Donate Now</h2><br/>
+                                    <h2>Give Now</h2><br/>
+                                    <h4>Dontatons of any amount are appreciated. Contributions help us directly cover hosting and operational expenses,
+                                        such as web servers, drawing tablets &amp; microphones for video production, and software licenses.</h4>
                                     <p>
                                     	<table class="table" border="0" cellpadding="0" cellspacing="0" style="width:250px">
                                     	<form action="https://authorize.payments.amazon.com/pba/paypipeline" method="post">
@@ -56,7 +58,7 @@
                                 </blockquote>
                             </div>
                           </div>
-
+{#
                           <div class="row-fluid">
                             <div class="span4">
                               <div class="hero-unit price inverse well">
@@ -106,7 +108,7 @@
                               </div>
                             </div>
                           </div>
-
+#}
 
 {#
                           <div class="row-fluid">
