info@ -> team@ email

--- a/templates/about.html
+++ b/templates/about.html
@@ -175,7 +175,7 @@
                                                  <tbody>
                                                    <tr>
                                                      <td>General Questions &amp; Feedback</td>
-                                                     <td><a href="mailto:info@clindesk.org">info@clindesk.org</a></td>
+                                                     <td><a href="mailto:team@clindesk.org">team@clindesk.org</a></td>
                                                    </tr>
                                                    <tr>
                                                      <td>Media &amp; PR Inquiries</td>
