--- a/templates/help.html
+++ b/templates/help.html
@@ -46,7 +46,7 @@
                             <div class="faq-inner">
                                 <p>We hope so! We go to great lengths to ensure our content is accurate, but we might make some mistakes (keep in mind we're medical students!).
                                 To make sure we're as error-free as possible, we review all our videos, and our clinical advisory board checks our content.</p>
-                                <p>If you've found an error or mistake, please let us know at <a href="mailto:info@clindesk.org">info@clindesk.org</a>.</p>
+                                <p>If you've found an error or mistake, please let us know at <a href="mailto:team@clindesk.org">team@clindesk.org</a>.</p>
                             </div>
                           </div>
                         </div>
@@ -88,7 +88,7 @@
                           </div>
                           <div class="faq-body collapse" id="faq4">
                             <div class="faq-inner">
-                                <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:info@clindesk.org">info@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
+                                <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:team@clindesk.org">team@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
                             </div>
                           </div>
                         </div>
