--- a/templates/index.html
+++ b/templates/index.html
@@ -41,16 +41,10 @@
             <div class="span12">
 
                 <div class="row-fluid relative">
-                    <div class="span12" id="condition-topics">
-                        <h1>Conditions</h1>
+                    <div class="span12" id="condition-topics" style="text-align: center;">
+                        <h1>Conditions &amp; Diseases</h1>
                     </div>
 
-                    <div class="carousel-nav">
-                        <div class="pull-right">
-                            <a href="#" id="carouselPrev" class="prev-btn pull-left label"><i class="icon-chevron-left icon-white"></i></a>
-                            <a href="#" id="carouselNext" class="next-btn pull-left label"><i class="icon-chevron-right icon-white"></i></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
