Some condition tweaks.

--- a/templates/conditions/heart-and-vessels.html
+++ b/templates/conditions/heart-and-vessels.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Heart and Vascular{% endblock %}
-{% block tagline_text %}Heart and Vascular{% endblock %}
+{% block title %}Heart and Vessels{% endblock %}
+{% block tagline_text %}Heart and Vessels{% endblock %}
 {% block maincontent %}
 <section class="mainContentWrap">
   <div class="container mainContent">
