--- a/templates/elements/all_conditions.html
+++ b/templates/elements/all_conditions.html
@@ -7,9 +7,27 @@
                     <div class="thumbnail">
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
+                            <h5>Metabolism &amp; Endocrine</h5>
+                            <p>Thyroid &amp; Parathyroid,<br/>
+                            Adrenal Gland,
+                            Diabetes,<br/>
+                            Lipid Disorders,<br/>
+                            Vitamins and Nutrition, Genetic Disorders (MEN I and II)</p>
+                            <p><a href="/conditions/" class="btn btn-primary">Learn More</a></p>
+                        </div>
+                    </div>
+                </li>
+                <li class="span3">
+                    <div class="thumbnail">
+{#                        <img src="http://placehold.it/260x180" alt="">#}
+                        <div class="caption" style="text-align: center">
                             <h5>Blood, Bone Marrow, Lymphatics</h5>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                            <p>Red Blood Cell Conditions,
+                                Clotting and Coagulation Disorders,
+                                Leukemias,
+                                Lymphomas,
+                                Benign Bone Marrow Disorders</p>
+                            <p><a href="/conditions/" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
                 </li>
@@ -17,31 +35,27 @@
                     <div class="thumbnail">
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
-                            <h5>Heart and Vascular</h5>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                            <h5>Heart and Vessels</h5>
+                            <p>Congenital Heart Defects,
+                            Diseases of Blood Vessels,
+                            Diagnostics and Blood Tests,
+                            Coronary Circulation Conditions,
+                            Cardiac Arrest</p>
+                            <p><a href="/conditions/" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
                 </li>
-
-                <li class="span3">
-                    <div class="thumbnail">
-{#                        <img src="http://placehold.it/260x180" alt="">#}
-                        <div class="caption" style="text-align: center">
-                            <h5>Kidneys</h5>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
-                        </div>
-                    </div>
-                </li>
-
                 <li class="span3">
                     <div class="thumbnail">
 {#                        <img src="http://placehold.it/260x180" alt="">#}
                         <div class="caption" style="text-align: center">
                             <h5>Lungs</h5>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p><a href="/conditions/" class="btn btn-info">Learn More</a></p>
+                            <p>Obstructive Disease
+                            Environmental and Occupational Diseases
+                            Pulmonary Circulation Conditions
+                            Restrictive and Interstitial Diseases
+                            Congenital Disorders</p>
+                            <p><a href="/conditions/" class="btn btn-info disabled">Coming Soon</a></p>
                         </div>
                     </div>
                 </li>
